# pQ

./: Cargo.toml  LICENSE  PKGBUILD  README.md
.github/workflows/: rust.yml
src/: main.rs  package.rs  paru.rs  process.rs  run.rs  select.rs  timezone.rs  utils.rs
