[package]
name = "apps"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.120"
chrono = "0.4.38"
chrono-tz = "0.9.0"

[dependencies.serde]
version = "1.0.204"
features = ["derive"]

[dependencies.tokio]
version = "1.38.1"
features = [
    "rt",
    "rt-multi-thread",
    "macros"
]