[package]
name = "pQ"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono-tz = "0.9.0"
archlinux-repo = "0.1.6"
chrono = "0.4.38"
serde_json = "1.0.120"
env_logger = "0.11.3"
log = "0.4.22"
aur-rpc = "0.2.2"

[dependencies.reqwest]
version = "0.12.5"
features = ["json"]

[dependencies.serde]
version = "1.0.204"
features = ["derive"]

[dependencies.tokio]
version = "1.38.1"
features = ["rt", "rt-multi-thread", "macros"]